test/classes/initializers/generics/phase1/multipleInits.good
multipleInits.chpl:6: In initializer:
multipleInits.chpl:9: error: multiple initializations of field "f2"
